--- a/package.json
+++ b/package.json
@@ -1,20 +1,58 @@
 {
-  "name": "lobe-chat-mimic",
-  "version": "0.1.0",
+  "name": "lobe-chat",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint && npm run ts-check && npm run stylelint",
+    "prepare": "husky install",
+    "prettier": "prettier -c --write \"**/**\"",
+    "release": "semantic-release",
     "start": "next start",
-    "lint": "next lint"
+    "stylelint": "stylelint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "test": "vitest --passWithNoTests",
+    "test:coverage": "vitest run --coverage --passWithNoTests",
+    "ts-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@vercel/analytics": "^1",
+    "lobe-ui": "^1",
+    "next": "^15",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13",
+    "@testing-library/jest-dom": "^5",
+    "@testing-library/react": "^14",
+    "@types/chroma-js": "^2",
+    "@types/lodash-es": "^4",
+    "@types/node": "^18",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^5",
+    "@types/uuid": "^9",
+    "@umijs/lint": "^4",
+    "@vitest/coverage-c8": "latest",
+    "@vitest/coverage-v8": "2.1.6",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "husky": "^8",
+    "jsdom": "^21",
+    "lint-staged": "^13",
+    "next-pwa": "^5",
+    "node-fetch": "^3",
+    "postcss-styled-syntax": "^0.4",
+    "prettier": "^2",
+    "prettier-plugin-organize-imports": "^3",
+    "prettier-plugin-packagejson": "^2",
+    "semantic-release": "^20",
+    "semantic-release-config-gitmoji": "^1",
+    "stylelint": "^15",
+    "stylelint-config-clean-order": "^5",
+    "stylelint-config-recommended": "^12",
+    "stylelint-order": "^6",
+    "typescript": "~5.1.0",
+    "vitest": "latest"
   }
 }
