--- a/.github/workflows/contributor-help.yml
+++ b/.github/workflows/contributor-help.yml
@@ -19,7 +19,7 @@ jobs:
           update-files: 'README.md'
           update-places: '<!-- CONTRIBUTION GROUP -->/<!-- CONTRIBUTION END -->'
 
-      - name: Commit and push if changed
+      - name: Configure Git
         run: |-
           git diff
           git config --global user.email "actions@github.com"
@@ -27,4 +27,13 @@ jobs:
           git pull
           git add -A
           git commit -m "🤖 docs: Auto update contributors" || exit 0
-          git push
+  
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v5
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          commit-message: "🤖 docs: Auto update contributors"
+          title: "🤖 docs: Auto update contributors"
+          body: "update contributors"
+          branch: "bot/update-contributors"
+          base: "main"
