--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lobe-chat",
+  "name": "lobe-chat-mimic",
   "version": "1.1.0",
   "private": true,
   "scripts": {
@@ -13,11 +13,13 @@
     "stylelint": "stylelint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "test": "vitest --passWithNoTests",
     "test:coverage": "vitest run --coverage --passWithNoTests",
+    "test:update": "vitest -u",
     "ts-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@lobehub/ui": "^1",
     "@vercel/analytics": "^1",
-    "lobe-ui": "^1",
+    "langchain": "latest",
     "next": "^15",
     "react": "^18",
     "react-dom": "^18"
@@ -28,7 +30,7 @@
     "@testing-library/react": "^14",
     "@types/chroma-js": "^2",
     "@types/lodash-es": "^4",
-    "@types/node": "^18",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/testing-library__jest-dom": "^6",
@@ -37,8 +39,8 @@
     "@vitest/coverage-c8": "latest",
     "@vitest/coverage-v8": "2.1.8",
     "eslint": "^8",
-    "husky": "^9",
-    "jsdom": "^21",
+    "husky": "^8",
+    "jsdom": "^22",
     "lint-staged": "^13",
     "next-pwa": "^5",
     "node-fetch": "^3",
@@ -46,13 +48,13 @@
     "prettier": "^2",
     "prettier-plugin-organize-imports": "^3",
     "prettier-plugin-packagejson": "^2",
-    "semantic-release": "^20",
+    "semantic-release": "^21",
     "semantic-release-config-gitmoji": "^1",
     "stylelint": "^15",
-    "stylelint-config-clean-order": "^6",
+    "stylelint-config-clean-order": "^5",
     "stylelint-config-recommended": "^12",
     "stylelint-order": "^6",
-    "typescript": "~5.1.0",
+    "typescript": "^5",
     "vitest": "latest"
   }
 }
