--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ts-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@langchain/core": "latest",
+    "@langchain/openai": "latest",
     "@lobehub/ui": "^1",
     "@vercel/analytics": "^1",
     "langchain": "latest",
